# hcompbuild

./: .gitignore  README.md  pyproject.toml
hcompbuild/: common.py  imports.py  preprocessing.py  specs.py  subsystems.py
hcompbuild/inputs/: uk_contacts_home.csv  uk_contacts_other.csv
